Header cta spacing fix

--- a/styles/sass/_sign_up.scss
+++ b/styles/sass/_sign_up.scss
@@ -1,10 +1,9 @@
-
 .sign_up {
     scroll-margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10rem 3rem;
+    margin: 10rem 3rem 10rem 3rem;
 
     h2 {
         margin-bottom: 15px;
@@ -235,6 +234,8 @@
 
 @media only screen and (max-width: 600px){
     .sign_up {
+        margin: 14rem 3rem 10rem 3rem;
+
         form {
             width: 100%;
 
