--- a/styles/styles.css
+++ b/styles/styles.css
@@ -579,7 +579,7 @@ header {
           animation: updown 2s ease-in-out 0s infinite alternate;
   z-index: -5;
   text-decoration: none;
-  margin-top: 10rem;
+  margin-top: 0;
 }
 
 .cta span {
@@ -692,7 +692,7 @@ header {
     width: 8vw;
   }
   .cta {
-    margin-top: 1rem;
+    margin-top: -6rem;
   }
   .header_text h1 {
     font-size: 2.5rem;
@@ -907,7 +907,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 10rem 3rem;
+  margin: 10rem 3rem 10rem 3rem;
 }
 
 .sign_up h2 {
@@ -1162,6 +1162,9 @@ header {
 }
 
 @media only screen and (max-width: 600px) {
+  .sign_up {
+    margin: 14rem 3rem 10rem 3rem;
+  }
   .sign_up form {
     width: 100%;
   }
